docs: 图片导出功能落地（README / 设计文档状态 / 计划修订记录）